# evalforge

./: .gitignore  ARCHITECTURE.md  STRUCTURE.md  pyproject.toml
.github/workflows/: ci.yml
src/evalforge/: __init__.py  decorators.py  exceptions.py  registry.py  suite.py  types.py
tests/: test_decorators.py  test_exceptions.py  test_registry.py  test_suite.py  test_types.py
