[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "evalforge"
version = "1.0.0-dev"

authors = [
    { name = "Vishwanath M M", email = "vishwanathdvgmm@gmail.com" }
]

description = "A decorator-driven evaluation framework for LLM apps — test text generation, RAG, and agents with rule-based or model-judged metrics, track regressions, and gate CI pipelines on score thresholds."

readme = "README.md"
requires-python = ">=3.12"

license = { text = "MIT" }
license-files = ["LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vishwanathdvgmm/evalforge"
Repository = "https://github.com/vishwanathdvgmm/evalforge"
Issues = "https://github.com/vishwanathdvgmm/evalforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/evalforge"]

[tool.hatch.build.targets.sdist]
include = [
    "src/evalforge",
    "README.md",
    "CHANGELOG.md",
    "ARCHITECTURE.md",
    "LICENSE"
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]